[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tibiatools"
version = "1.0.0"
description = "A collection of tools for the MMORPG Tibia"
authors = [{ name = "Jan Wądołowski" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "spacy>=3.8.4",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]
classifiers = [
    "Intended Audience :: Gamers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Gaming :: Tools :: Useful scripts"
]

[dependency-groups]
dev = ["isort>=6.0.1", "mypy>=1.15.0", "ruff>=0.9.10"]

[project.scripts]
exercise = "tibiatools.main:exercise_weapon_burnout_time"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["."]
